--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>List My Caravan</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-      
     </header>
 
     <main>
-
     </main>
 
     <footer>
-
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
