--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>List My Caravan</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>List My Caravan</title>
+  <link rel="stylesheet" href="/assets/styles.css">
 </head>
+
 <body>
-    <header>
-    </header>
+  <header>
+  </header>
 
-    <main>
-    </main>
+  <main>
+  </main>
 
-    <footer>
-    </footer>
+  <footer>
+  </footer>
 
-    <script src="script.js"></script>
+  <script src="/assets/script.js"></script>
 </body>
+
 </html>
