--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>List My Caravan</title>
-  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="stylesheet" href="/resources/styles.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   <footer>
   </footer>
 
-  <script src="/assets/script.js"></script>
+  <script src="/resources/script.js"></script>
 </body>
 
 </html>
