Adding all index pages

--- a/EditCaravan.html
+++ b/EditCaravan.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Welcome - ListMyCaravan</title>
+  <title>Edit Caravan - ListMyCaravan</title>
   <link rel="stylesheet" href="/resources/styles.css">
 </head>
 
