--- a/Profile.html
+++ b/Profile.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Welcome - ListMyCaravan</title>
+  <title>Profile - ListMyCaravan</title>
   <link rel="stylesheet" href="/resources/styles.css">
 </head>
 
