--- a/EditCaravan.html
+++ b/EditCaravan.html
@@ -17,7 +17,9 @@
   <footer>
   </footer>
 
-  <script src="/resources/script.js"></script>
+  <script>
+    //Add script
+  </script>
 </body>
 
 </html>
