--- a/html/CaravanList.html
+++ b/html/CaravanList.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About Us - ListMyCaravan</title>
+  <title>List Caravan - ListMyCaravan</title>
   <link rel="stylesheet" type="text/css" href="resources/styles.css">
 </head>
 
@@ -50,7 +50,7 @@
   </footer>
 
   <script>
-    //Add your scripts here
+    // Add Script
   </script>
 </body>
 
