--- a/html/Profile.html
+++ b/html/Profile.html
@@ -4,11 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <title>Profile - ListMyCaravan</title>
-  <link rel="stylesheet" href="/resources/styles.css">
+  <link rel="stylesheet" type="text/css" href="resources/styles.css">
 </head>
 
 <body>
   <header>
+    <div class="container">
+      <div class="navigation-bar">
+        <div class="nav-background"></div>
+        <div class="nav-buttons">
+          <div class="nav-button">
+            <a href="CaravanList.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">List</div>
+            </a>
+          </div>
+          <div class="nav-button">
+            <a href="AddCaravan.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">Add</div>
+            </a>
+          </div>
+          <div class="nav-button">
+            <a href="AboutUs.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">About Us</div>
+            </a>
+          </div>
+          <div class="nav-button">
+            <a href="Settings.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">Settings</div>
+            </a>
+          </div>
+        </div>
+        <div class="website-name">ListMyCaravan</div>
+      </div>
+    </div>
   </header>
 
   <main>
@@ -18,7 +50,7 @@
   </footer>
 
   <script>
-    //Add script
+    // Add Script
   </script>
 </body>
 
