--- a/html/EditCaravan.html
+++ b/html/EditCaravan.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Edit Caravan - ListMyCaravan</title>
+  <title>Edit Caravan- ListMyCaravan</title>
   <link rel="stylesheet" type="text/css" href="resources/styles.css">
 </head>
 
@@ -11,6 +11,7 @@
   <header>
     <div class="container">
       <div class="navigation-bar">
+        <div class="website-name">ListMyCaravan</div>
         <div class="nav-background"></div>
         <div class="nav-buttons">
           <div class="nav-button">
@@ -38,7 +39,6 @@
             </a>
           </div>
         </div>
-        <div class="website-name">ListMyCaravan</div>
       </div>
     </div>
   </header>
@@ -50,7 +50,7 @@
   </footer>
 
   <script>
-    // Add Script
+    //Add your scripts here
   </script>
 </body>
 
