--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Sign Up - ListMyCaravan</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="resources/styles.css">
 </head>
 
 <body>
