--- a/html/AddCaravan.html
+++ b/html/AddCaravan.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Add Caravan- ListMyCaravan</title>
+  <title>Add Caravan - ListMyCaravan</title>
   <link rel="stylesheet" type="text/css" href="resources/styles.css">
 </head>
 
@@ -41,6 +41,12 @@
         </div>
       </div>
     </div>
+    <div class="user-login-button">
+      <a href="login.html">
+        <img src="resources/circle-user-round.svg" alt="User Login">
+      </a>
+    </div>
+
   </header>
 
   <main>
