--- a/html/Settings.html
+++ b/html/Settings.html
@@ -41,6 +41,12 @@
         </div>
       </div>
     </div>
+    <div class="user-login-button">
+      <a href="login.html">
+        <img src="resources/circle-user-round.svg" alt="User Login">
+      </a>
+    </div>
+
   </header>
 
   <main>
