--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -23,9 +23,16 @@
       z-index: 2;
     }
 
+    .text-content {
+      width: auto;
+      padding: 0 40px;
+    }
+
+
     .content-with-image .text-content {
       position: relative;
       z-index: 1;
+      padding-right: 50px;
     }
 
     .content-with-image .text-content::before {
@@ -104,8 +111,17 @@
     <div class="text-content website-text">
       <h1>Lore Ipsum</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+        magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex eaLorem ipsum
+        dolor sit
+        amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex eaLorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis
+        nostrud exercitation ullamco laboris nisi ut aliquip ex eaLorem ipsum dolor sit amet, consectetur adipiscing
+        elit, sed
+        do eiusmod</p>
     </div>
 
 
@@ -125,7 +141,20 @@
         <img src="resources/aboutUsCaravan.png" alt="Shapes">
       </div>
     </div>
-
+    <div>
+      <br><br><br><br><br><br><br>
+    </div>
+    <div>
+      <div class="website-text">
+        <h3>Come visit us in person:</h3>
+      </div>
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d651223.1689221043!2d-5.593600353233433!3d50.38817174362165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486b1a89e07cda0b%3A0x21f5ef3c6362cf0c!2sHaven%20Perran%20Sands%20Holiday%20Park!5e0!3m2!1sen!2suk!4v1712486018302!5m2!1sen!2suk"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" style="text-align:center"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
   </main>
 
 
