--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -119,7 +119,7 @@
 
   <main>
     <div class="text-content website-text">
-      <h1>Lore Ipsum</h1>
+      <h1>About Us</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex eaLorem ipsum
@@ -137,7 +137,7 @@
 
     <div class="content-with-image">
       <div class="text-content website-text">
-        <h2>Lore Ipsum</h2>
+        <h2>Who We Are</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex eaLorem
           ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
