--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -66,7 +66,7 @@
       max-width: 100%;
       height: 610px;
       border: 0;
-      border-radius: 28px;
+      /*border-radius: 28px;*/
       margin: auto;
       display: block;
     }
@@ -151,13 +151,13 @@
         <img src="resources/aboutUsCaravan.png" alt="Shapes">
       </div>
     </div>
-    <div style="padding-top: 50px;">
+    <div style="padding-top: 100px;">
       <div class="website-text">
         <h3>Come visit us in person:</h3>
       </div>
       <div style="text-align: center;">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d651223.1689221043!2d-5.593600353233433!3d50.38817174362165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486b1a89e07cda0b%3A0x21f5ef3c6362cf0c!2sHaven%20Perran%20Sands%20Holiday%20Park!5e0!3m2!1sen!2suk!4v1712486018302!5m2!1sen!2suk"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2545.4280217568394!2d-5.146965523448154!3d50.358572871574744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486b1a89e07cda0b%3A0x21f5ef3c6362cf0c!2sHaven%20Perran%20Sands%20Holiday%20Park!5e0!3m2!1sen!2suk!4v1712520953256!5m2!1sen!2suk"
           allowfullscreen="" loading="lazy">
         </iframe>
       </div>
