--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -167,7 +167,8 @@
   </main>
 
 
-  <footer>
+  <footer class="website-text">
+    <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
   </footer>
 
 
