--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,8 @@
   <main>
   </main>
 
-  <footer>
+  <footer class="website-text">
+    <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
   </footer>
 
   <script>
