Dark/Light mode

--- a/html/EditCaravan.html
+++ b/html/EditCaravan.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Edit Caravan- ListMyCaravan</title>
-  <link rel="stylesheet" type="text/css" href="resources/styles.css">
+  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
 </head>
 
 <body>
@@ -56,8 +57,8 @@
     <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script>
-    //Add your scripts here
+  <script src="resources/script.js">
+    //Add Script
   </script>
 </body>
 
