--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - ListMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css">
+  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
 </head>
 
 <body>
@@ -18,8 +19,8 @@
     <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script>
-    // Add Script
+  <script src="resources/script.js">
+    //Add Script
   </script>
 </body>
 
