Profile, dark mode, consistency

--- a/html/Profile.html
+++ b/html/Profile.html
@@ -7,12 +7,10 @@
   <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
 </head>
+</head>
 
 <body>
   <header>
-    <div class="moon">
-      <img src="resources/moon.svg" alt="User Login">
-    </div>
     <div class="container">
       <div class="navigation-bar">
         <div class="website-name">ListMyCaravan</div>
@@ -46,7 +44,7 @@
       </div>
     </div>
     <div class="user-login-button">
-      <a href="login.html">
+      <a href="Login.html">
         <img src="resources/circle-user-round.svg" alt="User Login">
       </a>
     </div>
@@ -54,15 +52,21 @@
   </header>
 
   <main>
-  </main>
+    <div class="profileBox">
+      <img src="resources/defaultProfile.png" alt="Profile Picture" class="profile-pic">
+      <div class="text-box">First Name Last Name</div>
+      <div class="text-box">Email</div>
+      <div class="text-box">Phone Number</div>
+    </div>
 
-  <footer class="website-text">
-    <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
-  </footer>
 
-  <script src="resources/script.js">
-    //Add Script
-  </script>
+    <footer class="website-text">
+      <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
+    </footer>
+
+    <script src="resources/script.js">
+      //Add Script
+    </script>
 </body>
 
 </html>
