--- a/html/Settings.html
+++ b/html/Settings.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="user-login-button">
-      <a href="login.html">
+      <a href="Login.html">
         <img src="resources/circle-user-round.svg" alt="User Login">
       </a>
     </div>
