--- a/html/login.html
+++ b/html/login.html
@@ -6,6 +6,8 @@
   <title>Login - ListMyCaravan</title>
   <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+
+  <meta http-equiv="refresh" content="1; URL=Profile.html" />
 </head>
 
 <body>
@@ -13,6 +15,7 @@
   </header>
 
   <main>
+    <p>Redirecting to profile page for now</p>
   </main>
 
   <footer class="website-text">
@@ -20,7 +23,6 @@
   </footer>
 
   <script src="resources/script.js">
-    //Add Script
   </script>
 </body>
 
