--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
 
-  <meta http-equiv="refresh" content="1; URL=Profile.html" />
+  <meta http-equiv="refresh" content="3; URL=Profile.html">
+  Redirecting to profile page in 3.
+  Caitlin, you need to remove the meta tag when you start working on this page
 </head>
 
 <body>
@@ -15,7 +17,6 @@
   </header>
 
   <main>
-    <p>Redirecting to profile page for now</p>
   </main>
 
   <footer class="website-text">
