--- a/html/Settings.html
+++ b/html/Settings.html
@@ -60,7 +60,7 @@
     <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/script.js">
+  <script src="resources/settings.js">
     //Add Script
   </script>
 </body>
