welcome page button and fix links
added welcome page redirect when pressing the website name, and fixed links overriding css and adding underline

--- a/html/Settings.html
+++ b/html/Settings.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
       <div class="navigation-bar">
-        <div class="website-name">ListMyCaravan</div>
+        <div class="website-name"><a href="index.html">ListMyCaravan</a></div>
         <div class="nav-background"></div>
         <div class="nav-buttons">
           <div class="nav-button">
