--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <div class="navigation-bar">
-        <div class="website-name">ListMyCaravan</div>
+        <div class="website-name"><a href="index.html">ListMyCaravan</a></div>
         <div class="nav-background"></div>
         <div class="nav-buttons">
           <div class="nav-button">
