--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About Us - ListMyCaravan</title>
+  <title>About Us - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
 </head>
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <div class="navigation-bar">
-        <div><a href="index.html" class="website-name">ListMyCaravan</a></div>
+        <div><a href="index.html" class="website-name">RentMyCaravan</a></div>
         <div class="nav-background"></div>
         <div class="nav-buttons">
           <div class="nav-button">
@@ -99,7 +99,7 @@
 
 
   <footer class="website-text">
-    <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
+    <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
 
