--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sign Up - ListMyCaravan</title>
+  <title>Sign Up - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
 </head>
@@ -16,7 +16,7 @@
   </main>
 
   <footer class="website-text">
-    <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
+    <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
   <script src="resources/script.js">
