Massive css changes

--- a/html/Profile.html
+++ b/html/Profile.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Profile - RentMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
-</head>
+  <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/tim/timStyles.css" id="timStyle">
+  <link rel="stylesheet" href="resources/tim/darkStyles.css" id="darkStyle" </head>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
     </div>
     <div class="user-login-button">
       <a href="Login.html">
-        <img src="resources/circle-user-round.svg" alt="User Login">
+        <img src="resources/default/circle-user-round.svg" alt="User Login">
       </a>
     </div>
 
@@ -53,7 +53,7 @@
 
   <main>
     <div class="profileBox">
-      <img src="resources/defaultProfile.png" alt="Profile Picture" class="profile-pic">
+      <img src="resources/tim/defaultProfile.png" alt="Profile Picture" class="profile-pic">
       <div class="text-box">First Name Last Name</div>
       <div class="text-box">Email</div>
       <div class="text-box">Phone Number</div>
@@ -64,7 +64,7 @@
       <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
     </footer>
 
-    <script src="resources/script.js">
+    <script src="resources/default/script.js">
       //Add Script
     </script>
 </body>
