--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>About Us - RentMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+  <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/tim/timStyles.css" id="timStyle">
+  <link rel="stylesheet" href="resources/tim/darkStyles.css" id="darkStyle" disabled>
 </head>
 
 
@@ -45,7 +46,7 @@
     </div>
     <div class="user-login-button">
       <a href="Login.html">
-        <img src="resources/circle-user-round.svg" alt="User Login">
+        <img src="resources/default/circle-user-round.svg" alt="User Login">
       </a>
     </div>
 
@@ -79,7 +80,7 @@
           magna aliqua.</p>
       </div>
       <div class="image-container">
-        <img src="resources/aboutUsCaravan.png" alt="Shapes">
+        <img src="resources/tim/aboutUsCaravan.png" alt="Shapes">
       </div>
     </div>
     <div style="padding-top: 100px;">
@@ -103,7 +104,7 @@
   </footer>
 
 
-  <script src="resources/script.js">
+  <script src="resources/default/script.js">
     //Add Script
   </script>
 </body>
