--- a/html/Login.html
+++ b/html/Login.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - RentMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+  <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/caitlin/styles.css" id="caitlinStyle">
+  <link rel="stylesheet" href="resources/caitlin/darkStyles.css" id="darkStyle" disabled>
 
   <meta http-equiv="refresh" content="3; URL=Profile.html" />
   Redirecting to profile page in 3.
@@ -23,7 +24,7 @@
     <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/script.js">
+  <script src="resources/default/script.js">
   </script>
 </body>
 
