--- a/html/Settings.html
+++ b/html/Settings.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Settings - RentMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+  <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/jess/jessStyles.css" id="jessStyle">
+  <link rel="stylesheet" href="resources/jess/darkStyles.css" id="darkStyle" disabled>
 </head>
 
 <body>
@@ -47,7 +48,7 @@
     </div>
     <div class="user-login-button">
       <a href="Login.html">
-        <img src="resources/circle-user-round.svg" alt="User Login">
+        <img src="resources/default/circle-user-round.svg" alt="User Login">
       </a>
     </div>
 
