--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Sign Up - RentMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+  <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/caitlin/styles.css" id="caitlinStyle">
+  <link rel="stylesheet" href="resources/caitlin/darkStyles.css" id="darkStyle" disabled>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/script.js">
+  <script src="resources/default/script.js">
     //Add Script
   </script>
 </body>
