--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Welcome - RentMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+  <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
+  <link rel="stylesheet" href="resources/caitlin/styles.css" id="caitlinStyle">
+  <link rel="stylesheet" href="resources/caitlin/darkStyles.css" id="darkStyle" disabled>
 </head>
 
 <body>
@@ -44,7 +45,7 @@
     </div>
     <div class="user-login-button">
       <a href="Login.html">
-        <img src="resources/circle-user-round.svg" alt="User Login">
+        <img src="resources/default/circle-user-round.svg" alt="User Login">
       </a>
     </div>
 
@@ -57,7 +58,7 @@
     <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/script.js">
+  <script src="resources/default/script.js">
     //Add Script
   </script>
 </body>
