Bug Fixes for dark mode

--- a/html/Profile.html
+++ b/html/Profile.html
@@ -6,7 +6,7 @@
   <title>Profile - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/tim/timStyles.css" id="timStyle">
-  <link rel="stylesheet" href="resources/tim/darkStyles.css" id="darkStyle" </head>
+  <link rel="stylesheet" href="resources/tim/darkStyles.css" id="darkStyle" disabled>
 </head>
 
 <body>
