--- a/html/Settings.html
+++ b/html/Settings.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="moon">
-      <img src="resources/moon.svg" alt="Toggle Dark Mode" id="imageButton" style="cursor: pointer;">
+      <img src="resources/default/moon.svg" alt="Toggle Dark Mode" id="imageButton" style="cursor: pointer;">
     </div>
     <div class="container">
       <div class="navigation-bar">
@@ -61,7 +61,7 @@
     <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/settings.js">
+  <script src="resources/default/settings.js">
     //Add Script
   </script>
 </body>
