--- a/html/Login.html
+++ b/html/Login.html
@@ -4,18 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - RentMyCaravan</title>
-  <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/caitlin/styles.css" id="caitlinStyle">
+  <link rel="stylesheet" href="resources/caitlin/caitlinStyles.css" id="caitlinStyle">
   <link rel="stylesheet" href="resources/caitlin/darkStyles.css" id="darkStyle" disabled>
-
-  <meta http-equiv="refresh" content="3; URL=Profile.html" />
-  Redirecting to profile page in 3.
-  Caitlin, you need to remove the meta tag when you start working on this page
 </head>
 
 <body>
-  <header>
-  </header>
+  <main class="container">
+    <a href="index.html" style="text-decoration: none; color: #0fff95;">
+      <h1>ListMyCaravan</h1>
+  </a>
+    <p class="sign-in-text">Sign in to continue</p>
+
+
+    <form action="/login" method="post">
+        <div class="form-group">
+            <input type="email" id="Email" name="email" placeholder="Email" required>
+        </div>
+
+
+        <div class="form-group">
+            <input type="password" id="Password" name="password" placeholder="Password" required>
+        </div>
+
+
+        <div class="form-group">
+            <button type="submit">Login</button>
+        </div>
+    </form>
+
+
+    <p class="register-text">Don't have an account yet? <a href="Register.html" style="text-decoration: none; color: #0fff95;">Sign Up</a></p>
+
+
+</main>
 
   <main>
   </main>
