added dark mode

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <div class="container">
+    <div class="container-welcome">
       <div class="navigation-bar">
         <div><a href="index.html" class="website-name">RentMyCaravan</a></div>
         <div class="nav-background"></div>
