--- a/html/Login.html
+++ b/html/Login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <main class="container">
+  <main class="container-login">
     <a href="index.html" style="text-decoration: none; color: #0fff95;">
       <h1>ListMyCaravan</h1>
   </a>
