--- a/html/Login.html
+++ b/html/Login.html
@@ -10,33 +10,34 @@
 
 <body>
   <main class="container-login">
-    <a href="index.html" style="text-decoration: none; color: #0fff95;">
+    <a href="index.html" style="text-decoration: none; color: #0fff95; font-size: 22px;">
       <h1>ListMyCaravan</h1>
-  </a>
+    </a>
     <p class="sign-in-text">Sign in to continue</p>
 
 
     <form action="/login" method="post">
-        <div class="form-group">
-            <input type="email" id="Email" name="email" placeholder="Email" required>
-        </div>
+      <div class="form-group">
+        <input type="email" id="Email" name="email" placeholder="Email" required>
+      </div>
 
 
-        <div class="form-group">
-            <input type="password" id="Password" name="password" placeholder="Password" required>
-        </div>
+      <div class="form-group">
+        <input type="password" id="Password" name="password" placeholder="Password" required>
+      </div>
 
 
-        <div class="form-group">
-            <button type="submit">Login</button>
-        </div>
+      <div class="form-group">
+        <button type="submit">Login</button>
+      </div>
     </form>
 
 
-    <p class="register-text">Don't have an account yet? <a href="Register.html" style="text-decoration: none; color: #0fff95;">Sign Up</a></p>
+    <p class="register-text">Don't have an account yet? <a href="Register.html"
+        style="text-decoration: none; color: #1be18b;">Sign Up</a></p>
 
 
-</main>
+  </main>
 
   <main>
   </main>
