--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -3,25 +3,67 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sign Up - RentMyCaravan</title>
+  <title>Registration - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/caitlin/caitlinStyles.css" id="caitlinStyle">
   <link rel="stylesheet" href="resources/caitlin/darkStyles.css" id="darkStyle" disabled>
+
+  <style>
+    .container-login {
+      width: 700px;
+    }
+
+    input[type="email"],
+    input[type="password"],
+    input[type="text"] {
+      width: 650px;
+    }
+
+    button[type="submit"] {
+      width: 600px;
+    }
+  </style>
 </head>
 
 <body>
-  <header>
-  </header>
+  <main class="container-login">
+    <a href="index.html" style="text-decoration: none; color: #0fff95; font-size: 22px;">
+      <h1>ListMyCaravan</h1>
+    </a>
+    <p class="sign-in-text">Sign up to continue</p>
 
-  <main>
+    <form action="/register" method="post">
+      <div class="form-group name-group">
+        <input type="text" id="FirstName" name="firstName" placeholder="First Name" required>
+        <input type="text" id="LastName" name="lastName" placeholder="Last Name" required>
+      </div>
+
+      <div class="form-group">
+        <input type="email" id="Email" name="email" placeholder="Email" required>
+      </div>
+
+      <div class="form-group">
+        <input type="text" class="postCode" placeholder="Post Code" required>
+      </div>
+
+      <div class="form-group password-group">
+        <input type="password" id="Password" name="password" placeholder="Password" required>
+        <input type="password" id="RepeatPassword" name="repeatPassword" placeholder="Repeat Password" required>
+      </div>
+
+      <div class="form-group">
+        <button type="submit">Sign Up</button>
+      </div>
+    </form>
+
+    <p class="register-text">Already have an account? <a href="Login.html"
+        style="text-decoration: none; color: #1be18b;">Sign In</a></p>
   </main>
 
   <footer class="website-text">
-    <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
+    <p>© RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/default/script.js">
-    //Add Script
-  </script>
+  <script src="resources/default/script.js"></script>
 </body>
 
 </html>
