--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -3,23 +3,23 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Registration - RentMyCaravan</title>
+  <title>Sign Up - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/caitlin/caitlinStyles.css" id="caitlinStyle">
   <link rel="stylesheet" href="resources/caitlin/darkStyles.css" id="darkStyle" disabled>
 
   <style>
     .container-login {
-      width: 700px;
+      width: 65%;
     }
 
     input[type="email"],
     input[type="password"],
     input[type="text"] {
-      width: 650px;
+      width: 92.5%;
     }
 
     button[type="submit"] {
-      width: 600px;
+      width: 80%;
     }
   </style>
 </head>
