--- a/html/Login.html
+++ b/html/Login.html
@@ -33,7 +33,7 @@
     </form>
 
 
-    <p class="register-text">Don't have an account yet? <a href="Register.html"
+    <p class="register-text">Don't have an account yet? <a href="SignUp.html"
         style="text-decoration: none; color: #1be18b;">Sign Up</a></p>
 
 
