--- a/html/Settings.html
+++ b/html/Settings.html
@@ -55,6 +55,36 @@
   </header>
 
   <main>
+    <div class="container settings-container">
+      <h2>Settings</h2>
+      <form class="settings-form">
+        <div>
+          <label for="firstName">First Name:</label>
+          <input type="text" id="firstName" name="firstName" placeholder="First Name" required>
+        </div>
+        <div>
+          <label for="lastName">Last Name:</label>
+          <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
+        </div>
+        <div>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" placeholder="Email" required>
+        </div>
+        <div>
+          <label for="phoneNumber">Phone Number:</label>
+          <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Phone number" required>
+        </div>
+        <div>
+          <label for="address">Address:</label>
+          <input type="text" id="address" name="address" placeholder="Address" required>
+        </div>
+        <div>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" placeholder="Password" required>
+        </div>
+      </form>
+      <button class="delete-account-button">Delete Account</button>
+    </div>
   </main>
 
   <footer class="website-text">
