fix copyright mistakes

--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -59,7 +59,7 @@
   </main>
 
   <footer class="website-text">
-    <p>© RentMyCaravan 2024 - All rights reserved</p>
+    <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
   <script src="resources/default/script.js"></script>
