--- a/html/Login.html
+++ b/html/Login.html
@@ -15,7 +15,6 @@
     </a>
     <p class="sign-in-text">Sign in to continue</p>
 
-    <!-- Corrected form with proper action attribute -->
     <form action="php/Login.php" method="post">
       <div class="form-group">
         <input type="email" id="Email" name="email" placeholder="Email" required>
@@ -33,7 +32,7 @@
   </main>
 
   <footer class="website-text">
-    <p>© RentMyCaravan 2024 - All rights reserved</p>
+    <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
   <script src="resources/default/script.js"></script>
