--- a/html/Settings.html
+++ b/html/Settings.html
@@ -91,9 +91,7 @@
     <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/default/settings.js">
-    //Add Script
-  </script>
+  <script src="resources/default/settings.js"></script>
 </body>
 
 </html>
